--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		Alan Leonard - User Experience Developer
 		</title>
 		<link rel="stylesheet" href="styles.css">
+		<link rel="icon" type="image/png" href="favicon.png">
 	</head>
 	<body>
 		<header>
